--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Seo -->
-    <meta name="author" content="Abdo Mohamed">
+    <meta name="author" content="Abdelmaboud Mohamed">
     <meta name="description" content="Experienced Full Stack .NET Developer with expertise in ASP.NET MVC, web development, and Azure. Explore my projects and skills in software development.">
     <meta name="keywords" content="Full Stack Developer, .NET Developer, ASP.NET MVC, C#, Web Development,  Front-end Developer  ,Azure, JavaScript, SQL, Portfolio">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Full Stack .NET Developer | Abdo Mohamed">
-    <meta property="og:title" content="Full Stack .NET Developer | Abdo Mohamed">
-    <meta property="og:description" content="Explore the portfolio of Abdo Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
-    <meta property="og:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg">
-    <meta property="og:url" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/">
+    <meta property="og:site_name" content="Full Stack .NET Developer | Abdelmaboud Mohamed">
+    <meta property="og:title" content="Full Stack .NET Developer | Abdelmaboud Mohamed">
+    <meta property="og:description" content="Explore the portfolio of Abdelmaboud Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
+    <meta property="og:image" content="https://abdomohaamed.github.io/ABDELMABOUD27/assets/image/Abdo.jpg">
+    <meta property="og:url" content="https://abdomohaamed.github.io/ABDELMABOUD27">
     <!-- Twitter -->
-    <meta name="twitter:title" content="Front-end Developer  | Abdo Mohamed">
-    <meta name="twitter:description" content="Explore the portfolio of Abdo Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
-    <meta name="twitter:image" content="https://abdomohaamed.github.io/Abdelmaboud.github.io/assets/image/Abdo.jpg">
+    <meta name="twitter:title" content="Full Stack .NET Developer  | Abdelmaboud Mohamed">
+    <meta name="twitter:description" content="Explore the portfolio of Abdelmaboud Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
+    <meta name="twitter:image" content="https://abdomohaamed.github.io/ABDELMABOUD27/assets/image/Abdo.jpg">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/image/logoabdo.png" type="image/x-icon">
 
@@ -43,7 +43,7 @@
                     <img src="./assets/image/Abdo.jpg" style="border-radius: 30px;" alt="Alfaizkhan Pathan" width="80">
                 </figure>
                 <div class="info-content">
-                    <h1 class="name" title="Abdo Mohamed">Abdo Mohamed </h1>
+                    <h1 class="name" title="Abdelmaboud Mohamed">Abdelmaboud Mohamed </h1>
                     <p class="title">Full Stack .Net Developer </p>
                 </div>
 
