--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="./assets/image/Abdo.jpg" style="border-radius: 30px;" alt="Alfaizkhan Pathan" width="80">
                 </figure>
                 <div class="info-content">
-                    <h1 class="name" title="Abdelmaboud Mohamed">Abdelmaboud Mohamed </h1>
+                    <h1 class="name" title="Abdelmaboud Mohamed">Abdelmaboud <br /> Mohamed </h1>
                     <p class="title">Full Stack .Net Developer </p>
                 </div>
 
