--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="twitter:description" content="Explore the portfolio of Abdelmaboud Mohamed, a Full Stack .NET Developer with expertise in ASP.NET MVC, C#, and Azure.">
     <meta name="twitter:image" content="https://abdomohaamed.github.io/ABDELMABOUD27/assets/image/Abdo.jpg">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="./assets/image/logoabdo.png" type="image/x-icon">
-
+    <link rel="shortcut icon" href="./assets/image/favicon.ico" type="image/x-icon">
+  
 
 </head>
 
