save all last update 21-07-2025

--- a/index.html
+++ b/index.html
@@ -399,18 +399,18 @@
 
                         <li class="timeline-item">
 
-                            <h4 class="h4 timeline-item-title">Egypt's Dar Al-iftaa</h4>
+                            <h4 class="h4 timeline-item-title">Sig Smart Technology</h4>
                             <span>
                                 SENIOR FULL-STACK .NET DEVELOPER
                             </span>
                             <span>April 2023 — Present (Full-Time on-site)</span>
 
                             <p class="timeline-text">
-                                Dar Al-Iftaa is now responsible for most religious orientation projects in the Arab Republic of Egypt. It has many projects,
-                                and these projects include  :
-                                <br>Special projects for the Dar Al-Iftaa: management and governance system. Personnel Affairs. Mechanization. Fatwas.
-                                <br>General Secretariat: External debt management.
-                                <br>  Skills: ASP.NET · C# · MVC · HTML · CSS · JavaScript · jQuery
+                                A results-driven and detail-oriented .NET Developer with a strong foundation in ASP.NET MVC, Entity Framework, and SQL Server, combined with hands-on experience in modern front-end frameworks. Passionate about building scalable, secure, and user-friendly web applications.
+                                <br>At SIG Smart Technology, I contributed to designing and implementing full-stack solutions, integrating third-party APIs (e.g., SMS, email, payment), and optimizing
+                                <br>Implementing secure authentication flows (login, registration, OTP, forgot password).
+                                <br>Integrating SMS gateways (Nexmo, Cequens, SMSMisr) and email services using SMTP and OAuth.
+                                <br>Applying clean architecture with Repository & Dependency Injection patterns.
                             </p>
 
                         </li>
@@ -571,7 +571,7 @@
 
                             <div class="title-wrapper">
                                 <h5 class="h5">CSS</h5>
-                                <data value="90">90%</data>
+                                <data value="100">100%</data>
                             </div>
 
                             <div class="skill-progress-bg">
@@ -611,6 +611,18 @@
 
                             <div class="title-wrapper">
                                 <h5 class="h5">.Net Framework</h5>
+                                <data value="90">90%</data>
+                            </div>
+
+                            <div class="skill-progress-bg">
+                                <div class="skill-progress-fill" style="width: 90%;"></div>
+                            </div>
+
+                        </li>
+                        <li class="skills-item">
+
+                            <div class="title-wrapper">
+                                <h5 class="h5">.Net Core</h5>
                                 <data value="90">90%</data>
                             </div>
 
@@ -837,7 +849,7 @@
                             </a>
                         </li>
                         <li class="project-item  active" data-filter-item data-category="web development">
-                            <a href="#">
+                            <a href="http://conferenceapi.fatwaacademy.org/Admin/Account/login">
 
                                 <figure class="project-img">
                                     <div class="project-item-icon-box">
