--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@
 
                             <h4 class="h4 timeline-item-title">Sig Smart Technology</h4>
                             <span>
-                                SENIOR FULL-STACK .NET DEVELOPER
+                                SR. FULL-STACK .NET DEVELOPER
                             </span>
-                            <span>April 2023 — Present (Full-Time on-site)</span>
+                            <span>05/2022 — Present (Full-Time on-site)</span>
 
                             <p class="timeline-text">
                                 A results-driven and detail-oriented .NET Developer with a strong foundation in ASP.NET MVC, Entity Framework, and SQL Server, combined with hands-on experience in modern front-end frameworks. Passionate about building scalable, secure, and user-friendly web applications.
@@ -420,7 +420,7 @@
                             <span>
                                 JR. FULL-STACK .NET DEVELOPER
                             </span>
-                            <span>Dec 2022 - Feb  2023 (Full-Time on-site)</span>
+                            <span>12/2020 - 04/2022 (Full-Time on-site)</span>
                             <p class="timeline-text">
                                 My responsibility was to create and design websites and create Apis for mobile applications. The company was basically creating and developing Erp systems and we were creating programs that integrated with the invoice and electronic receipt systems.
                                 <br>
@@ -434,7 +434,7 @@
                             <span>
                                 JR. FULL-STACK .NET DEVELOPER
                             </span>
-                            <span>April 2022 - Nov  2022 (Part-Time Remote)</span>
+                            <span>01/2020 - 11/2020 (Part-Time Remote)</span>
 
                             <p class="timeline-text">
                                 Work in Server Side (DataTable ) Create Report and make buttons to esay print and search about thing in page by use Crud operation with , Ajax , Javascript , jquery method in asp.net
@@ -464,7 +464,7 @@
                             <h4 class="h4 timeline-item-title">Azure Open Ai</h4>
                             <span>Microsoft</span>
 
-                            <span>September 1, 2024 – September 15, 2024</span>
+                            <span>2024</span>
 
                             <p class="timeline-text">
                                 Completed a specialized training in Azure OpenAI, gaining practical experience in deploying and managing AI models using Microsoft Azure's cloud platform. Acquired skills in integrating OpenAI services for natural language processing, machine learning, and advanced data analysis.
@@ -472,20 +472,7 @@
 
                         </li>
 
-                        <li class="timeline-item">
 
-                            <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
-                            <span>Elaraby Group</span>
-                            <span>Aug 2022 — Aug 2022 (Remote)</span>
-                            <p class="timeline-text">
-                                The training provided by El-Araby Trading and Industry
-                                Company I was training in the information technology
-                                department and my specialization was the creation and
-                                development of websites using .Net.
-
-                            </p>
-
-                        </li>
                         <li class="timeline-item">
 
                             <h4 class="h4 timeline-item-title">
@@ -493,23 +480,37 @@
                             </h4>
                             <span>National Telecommunication Institute</span>
 
-                            <span>Jan 2022 - Mar 2022</span>
+                            <span>11/2020 - 01/2021</span>
 
                             <p class="timeline-text">
                                 The training provided by the National Telecommunications Institute (INEC) focused on web design using design languages HTML, CSS, JS, and BootStrap.
                             </p>
 
-                        </li>   
+                        </li>
                         <li class="timeline-item">
 
                             <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
-                   
+
                             <span>  Russian Cultural Center</span>
 
-                            <span>January 2019 – June 2019</span>
+                            <span>04/2020 – 10/2020</span>
 
                             <p class="timeline-text">
-                                The training provided by the Russian Cultural Center focused on web design using design languages HTML, CSS, JS , BootStrap , C# ,  .Net Framework  and Object Oriented Analysis and Design .
+                                The training provided by the Russian Cultural Center focused on web design using
+                                design languages HTML, CSS, JS , BootStrap , C# , .Net Framework and Object
+                                Oriented Analysis and Design .
+                            </p>
+
+                        </li>
+                        <li class="timeline-item">
+
+                            <h4 class="h4 timeline-item-title">Full Stack Developer Trainee</h4>
+                            <span>Elaraby Group</span>
+                            <span>06/2019 — 01/2020</span>
+                            <p class="timeline-text">
+                                Participated in a hands-on training program focused on developing full-stack web
+                                applications using Microsoft technologies. The training covered both frontend and
+                                backend development along with database design and integration.
                             </p>
 
                         </li>
@@ -536,10 +537,11 @@
                             <span>2016 — 2020</span>
 
                             <p class="timeline-text">
-                                Bachelor of Computer Scince
+                                Bachelor of Computer Scince, Modern Academy
                                 <br>
-                                Grade: Good
-                                </br>
+                                Overall Grade : (Good)
+                                <br>
+                                Graduation Project Grade : A +
 
                             </p>
 
